refactor: 整合信息图标指南到贡献文档，优化代码结构和资源管理
- 将信息图标开发指南内容整合到 CONTRIBUTING.md，包括去重原则、优先级规则和动态定位实现
- 添加语言列表去重规范说明，明确 TtsLanguageVoiceHelper 中的去重逻辑
- 更新信息图标规范，统一页面内容区域（灰色 14dp）和工具栏区域（白色 24dp）的图标标准
- 新增信息图标布局模板和动态定位代码示例
- 删除独立的信息图标开发指南文档，简化文档结构
- 删除过时的 API 参考文档（Locale、TextToSpeech、Voice 类）
- 优化 MainActivity 中的导入语句，移除未使用的 EdgeToEdge 和 DelayedTaskHelper
- 添加 @NonNull 和 @Nullable 注解提高代码可读性
- 新增 ClipboardManager 相关导入以支持剪贴板功能
- 更新多个 Activity 和工具类的代码结构，提高代码质量和可维护性
- 新增警告按钮背景和信息图标资源文件（ic_info_content.xml、ic_info_toolbar.xml）
- 删除旧的信息图标资源（ic_info_white_20dp.xml）
- 更新布局文件和菜单资源以适配新的图标和样式规范
- 更新中英文字符串资源，完善用户界面文本